--- a/server/appsettings.Development.json
+++ b/server/appsettings.Development.json
@@ -5,5 +5,8 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "plaudernDB": "Server=localhost;Database=plauderndb;User Id=sa;Password=1234asdfFDSA@2019;"
   }
 }
