Implement user Authentication API

--- a/server/appsettings.Development.json
+++ b/server/appsettings.Development.json
@@ -8,5 +8,8 @@
   },
   "ConnectionStrings": {
     "plaudernDB": "Server=localhost;Database=plauderndb;User Id=sa;Password=1234asdfFDSA@2019;"
+  },
+  "AppSettings": {
+    "SecretKey": "1234asdfFDSA@@QQ"
   }
 }
