--- a/client/package.json
+++ b/client/package.json
@@ -12,15 +12,21 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/vue-fontawesome": "^0.1.7",
-    "bootstrap": "^4.3.1",
+    "axios": "^0.19.0",
     "core-js": "^2.6.5",
+    "material-design-icons-iconfont": "^5.0.1",
+    "vee-validate": "^3.0.8",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
     "vue-property-decorator": "^8.1.0",
     "vue-router": "^3.0.3",
-    "vuex": "^3.0.1"
+    "vuetify": "^2.0.0",
+    "vuex": "^3.0.1",
+    "vuex-class": "^0.3.2",
+    "vuex-persistedstate": "^2.5.4"
   },
   "devDependencies": {
+    "@mdi/font": "^4.4.95",
     "@types/jest": "^23.1.4",
     "@vue/cli-plugin-babel": "^3.11.0",
     "@vue/cli-plugin-eslint": "^3.11.0",
@@ -37,9 +43,12 @@
     "eslint-plugin-vue": "^5.0.0",
     "node-sass": "^4.9.0",
     "prettier": "^1.18.2",
+    "sass": "^1.17.4",
     "sass-loader": "^7.1.0",
     "ts-jest": "^23.0.0",
     "typescript": "^3.4.3",
-    "vue-template-compiler": "^2.6.10"
+    "vue-cli-plugin-vuetify": "^0.6.3",
+    "vue-template-compiler": "^2.6.10",
+    "vuetify-loader": "^1.2.2"
   }
 }
