--- a/client/package.json
+++ b/client/package.json
@@ -15,9 +15,10 @@
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
     "material-design-icons-iconfont": "^5.0.1",
-    "vee-validate": "^3.0.8",
+    "vee-validate": "^3.0.11",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
+    "vue-date-pick": "^1.2.1",
     "vue-property-decorator": "^8.1.0",
     "vue-router": "^3.0.3",
     "vuetify": "^2.0.0",
